<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.7</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>de.frees</groupId>
    <artifactId>backend-gameserver</artifactId>
    <version>1.0.0</version>
    <name>backend-gameserver</name>
    <description>backend-gameserver</description>

    <properties>
        <java.version>21</java.version>
        <java.compile>21</java.compile>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <openapi-generator-maven-plugin.version>7.2.0</openapi-generator-maven-plugin.version>
        <lombok.version>1.18.42</lombok.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-webmvc-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openapitools</groupId>
            <artifactId>jackson-databind-nullable</artifactId>
            <version>0.2.8</version>
        </dependency>
        <dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-annotations-jakarta</artifactId>
            <version>2.2.37</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <!-- MapperStruct   -->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <version>${mapstruct.version}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[21,)</version>
                                    <message>This project requires JDK 21 or newer. Set JAVA_HOME to a JDK 21 installation before running Maven.</message>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>${openapi-generator-maven-plugin.version}</version>

                <configuration>
                    <!-- Generator to use -->
                    <generatorName>spring</generatorName>
                    <!-- API package name -->
                    <apiPackage>com.example.itemapi.api</apiPackage>
                    <!-- Model package name -->
                    <modelPackage>com.example.itemapi.model</modelPackage>
                    <!-- Invoker package name -->
                    <invokerPackage>com.example.itemapi.handler</invokerPackage>
                    <modelNameSuffix>DTO</modelNameSuffix>
                    <!-- Additional properties -->
                    <typeMappings>
                        <typeMapping>DateTime=java.time.OffsetDateTime</typeMapping>
                    </typeMappings>
                    <importMappings>
                        <importMapping>java.time.OffsetDateTime=java.time.OffsetDateTime</importMapping>
                    </importMappings>
                    <skipValidateSpec>false</skipValidateSpec>
                    <generateSupportingFiles>false</generateSupportingFiles>
                    <skipOverwrite>false</skipOverwrite>

                    <!-- Additional properties -->
                    <configOptions>
                        <!-- Use Spring Boot 3 -->
                        <useSpringBoot3>true</useSpringBoot3>
                        <!-- Use Jakarta EE instead of javax -->
                        <useJakartaEe>true</useJakartaEe>
                        <!-- Generate only interfaces (no implementation) -->
                        <interfaceOnly>true</interfaceOnly>
                        <!-- Skip default interface methods -->
                        <skipDefaultInterface>true</skipDefaultInterface>
                        <!-- Use tags for controller class names -->
                        <useTags>true</useTags>
                        <!-- Generate Spring documentation -->
                        <documentationProvider>springdoc</documentationProvider>
                        <!-- Use Optional for optional parameters -->
                        <useOptional>true</useOptional>
                        <!-- Generate Bean Validation annotations -->
                        <useBeanValidation>true</useBeanValidation>
                        <!-- Perform Bean Validation -->
                        <performBeanValidation>true</performBeanValidation>
                        <!-- Hide generation timestamp -->
                        <hideGenerationTimestamp>true</hideGenerationTimestamp>
                        <!-- Remove prefix from enum names -->
                        <removeEnumValuePrefix>false</removeEnumValuePrefix>
                        <useOptional>false</useOptional>
                    </configOptions>
                </configuration>

                <executions>
                    <execution>
                        <id>generate-error</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/api-spec/open-api-error-spec.yaml</inputSpec>
                        </configuration>
                    </execution>

                    <execution>
                        <id>generate-item</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/api-spec/open-api-item-spec.yaml</inputSpec>
                        </configuration>
                    </execution>

                </executions>
            </plugin>
        </plugins>
    </build>

</project>
